# multi-agent-llm-system

./: .env.example  README.md  USAGE_GUIDE.md  interactive_mode.py  main.py  pyproject.toml  requirements.txt  test_agent_integration.py
.claude/: settings.local.json
agents/: __init__.py  agent_tools_mixin.py  base_agent.py  ceo.py  cto.py  data_analyst.py  developer.py  devops_engineer.py  hypertree_planner.py  personality.py  product_manager.py  qa_engineer.py  react_loop.py  researcher.py  roles.py  security_engineer.py  thinking.py  tree_of_thoughts.py
collaboration/: __init__.py  critic_ensemble.py  debate.py  meeting.py  moa_aggregator.py
company/: __init__.py  backlog.py  culture.py  hiring.py  meetings.py  organization.py  performance.py  sprint.py  trust.py
config/: __init__.py  config_loader.py  domains.py  llm_client.py  models.py  roles.py  settings.py  validation.py
memory/: __init__.py  agent_memory.py  context_manager.py  learning.py  rag_store.py  session.py  shared_memory.py
orchestrator/: __init__.py  artifact_parser.py  artifacts.py  escalation.py  message_bus.py  plan_mode.py  task_manager.py  task_queue.py  workflow.py
research/: __init__.py  credibility.py  cross_validator.py  problem_discoverer.py  problem_statement_refiner.py  sources.py  web_scraper.py  web_search.py
templates/: __init__.py  project_templates.py
tests/: __init__.py  conftest.py  test_file_lock.py  test_input_validation.py  test_rate_limiter.py
tools/: __init__.py  code_formatter.py  command_executor.py  enhanced_lsp.py  file_operations.py  git_tools.py  mcp.py  (+6 more)
(+36 files in other folders)
